Implemeneting hit points

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,8 @@
-<%= @player_2_name%> has been attacked
+
+
+<center>
+
+<h1><%= @player_2.name%> has been attacked</h1>
+<h2><%= @player_2.name%>: <%= @player_2.hit_points %>HP</h2>
+
+</center>
