--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,13 @@
-<%= @player_1_name %> vs. <%= @player_2_name %>
+<center>
+
+<h1><%= @player_1.name %> vs. <%= @player_2.name %></h1>
+<br>
+<br>
+<h2><%= @player_1.name%>: 60 HP </h2>
+<h2><%= @player_2.name%>: 60 HP </h2>
+<br>
+
+
+<a href="/attack">Attack</a>
+
+</center>
