--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,17 @@
-<h1>Battle!</h1>
-
+<center> <h1>Battle!</h1>
 
 <form action="/names" method="post">
   <label for="player_1_name">
-    Player 1 name
-    <input type="text" name="player_1_name">
+    <input type="text" placeholder="Enter Players Name" name="player_1_name">
   </label>
   <label for="player_2_name">
-    Player 2 name
-    <input type="text" name="player_2_name">
+    <input type="text" placeholder="Enter Players Name" name="player_2_name">
   </label>
+  <br>
+  <h2>Let's go! </h2>
+  <br>
   <input type="submit" value="Submit">
 </form>
 
-<h2>Let's go! </h2>
+</center>
+
