--- a/views/play.erb
+++ b/views/play.erb
@@ -1,10 +1,10 @@
 <center>
 
-<h1><%= @player_1.name %> vs. <%= @player_2.name %></h1>
+<h1><%= @game.player_1.name %> vs. <%= @game.player_2.name %></h1>
 <br>
 <br>
-<h2><%= @player_1.name%>: 60 HP </h2>
-<h2><%= @player_2.name%>: 60 HP </h2>
+<h2><%= @game.player_1.name%>: 60 HP </h2>
+<h2><%= @game.player_2.name%>: 60 HP </h2>
 <br>
 
 
