implemented switching turns

--- a/views/play.erb
+++ b/views/play.erb
@@ -7,7 +7,9 @@
 <h2><%= @game.player_2.name%>: 60 HP </h2>
 <br>
 
+<%= @game.current_turn.name %>'s turn
 
 <a href="/attack">Attack</a>
+
 
 </center>
