--- a/views/attack.erb
+++ b/views/attack.erb
@@ -5,4 +5,15 @@
 <h1><%= @game.player_2.name%> has been attacked</h1>
 <h2><%= @game.player_2.name%>: <%= @game.player_2.hit_points %>HP</h2>
 
+
+<h2><%= @game.player_1.name%>: <%= @game.player_1.hit_points %>HP</h2>
+<br>
+
+
+<h3><%=@game.current_turn.name %>'s turn</h3>
+
+<br>
+<a href="/attack">Attack</a>
+
+
 </center>
