--- a/views/play.erb
+++ b/views/play.erb
@@ -7,9 +7,13 @@
 <h2><%= @game.player_2.name%>: 60 HP </h2>
 <br>
 
-<%= @game.current_turn.name %>'s turn
+<h3><%= @game.current_turn.name %>'s turn</h3>
 
 <a href="/attack">Attack</a>
+
+<br>
+
+<img src= "https://s.abcnews.com/images/Technology/HT_bowser_jef_150520_16x9_992.jpg" width="750" height="442">
 
 
 </center>
